# hacknation-2025-NASK

./: .gitignore  README.md  anonymize_final.py  download_models.py  example.py  generate_bio.py  generate_presentation_pdf.py  generate_results.py  main.py  output_all_in.txt  performance_all_in.txt  preprocessing_all_in.md  pyproject.toml  readme.md  regex.py  requirements.txt  setup.py  synthetic_generation_all_in.md  test_model.py  test_pllum.py  upload_model.py
anonymizer/: __init__.py  core.py  ner_layer.py  pllum_client.py  regex_layer.py  synthetic.py  utils.py
dane_final_test/: anonymized_final.txt
pllum_anonymizer/: __init__.py  core.py  ner_layer.py  pllum_client.py  regex_layer.py  synthetic.py  utils.py
tests/: test_basic.py
